# email-newsletter

./: .gitignore  Cargo.toml
migrations/2022-05-27-071633_create_subs/: up.sql
src/: lib.rs  main.rs  models.rs  schema.rs
tests/: health_check.rs
